[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main/DayClockFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Clock/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/LevelUI/LevelUI.gd" type="Script" id=4]

[node name="LevelUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2

[node name="CleanProgressBar" type="ProgressBar" parent="VBoxContainer/Control"]
margin_left = 307.226
margin_top = 20.6818
margin_right = 681.226
margin_bottom = 42.6818
mouse_filter = 2
max_value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayClock" parent="VBoxContainer/Control" instance=ExtResource( 2 )]
margin_left = 708.498
margin_top = 13.6832
margin_right = 788.498
margin_bottom = 93.6832
mouse_filter = 2

[node name="DayClockLabel" type="Label" parent="VBoxContainer/Control"]
margin_left = 709.159
margin_top = 36.6368
margin_right = 784.159
margin_bottom = 76.6368
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.152941, 0, 1 )
text = "10.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 800.0
margin_bottom = 1280.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JobsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
mouse_filter = 2
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="VBoxContainer/Control/DayClock" to="." method="_on_DayClock_timeout"]
